2009-01-12  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.13

2009-01-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#97083

	* matchbox/core/mb-window-manager.c:
	Don't set _MB_CURRENT_APP_WINDOW at all, but do it in h-d.
	mb is not smart enough to know what an "application" is
	and when it is changing, and the FKB hides when it believes
	the current application has switched away.

2009-01-08  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	Put brackets in the correct place so the EGLX pixmap is only renewed
	when the fullscreen state has changed. Also added code to check the 
	actor size and position against the X size and position and make sure 
	it is the same - to fix bug #95594

2009-01-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_repair_real): Optimisation for file
	manager like applications. Update the whole bounding box if there are
	three or more damaged areas. (The threshold value may need adjusting.)

2008-12-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.12

2008-12-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client.c (mb_wm_client_get_transients): Patch
	from Laszlo to return the list in non-reversed order. Fixes: NB#93736

2008-12-15  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.11

2008-12-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_configure_real): Adjust the xmas hack:
	fetch texture for others but the systemui menu, to avoid the white
	window. This is not working perfectly yet if the size of the texture
	changes (size changes but the Clutter actor is not moved immediately).

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Do not force fixed-size for the menu window but only ensure minimum x